--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -26,8 +26,9 @@ date: August 6-9, 2020
 https://defcon.org/index.html
 
 ## Booth Inventory
-- 2,500 Sticker sheets (maybe collateral on back)
-- 1,000 Shirts
+- 2,500 Sticker sheets (maybe collateral on  back)
+- 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL)
+- Postcard handouts for future OWASP Global Events
 
 ## Milestones
 
@@ -37,14 +38,14 @@ https://defcon.org/index.html
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
 - [ ] 2020-04-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
 - [ ] 2020-06-01, Application accepted Go or NO Go 
-- [ ] 2020 Artwork - (stickers, t-shirts?, postcard) 
-- [ ] 2020 Confirm and approve all artwork 
-- [ ] 2020 Volunteers identified and approved
-- [ ] 2020 All material ordered by the Foundation for delivery to Harrah's 3475 Las Vegas Boulevard South Las Vegas, NV 89109, US
+- [ ] 2020-05-15, Artwork - (stickers, t-shirts?, postcard) 
+- [ ] 2020-05-18, Confirm and approve all artwork [Mike]
+- [ ] 2020-06-01 All material ordered by the Foundation for delivery to Harrah's 3475 Las Vegas Boulevard South Las Vegas
+- [ ] 2020-07-02 Volunteers (must be OWASP members) identified (wufoo) [Lisa]
 
 ## Leadership
 
-* [Lisa Jones](mailto:lisa.jones@owasp.com?subject=DEFCON%20Project)
+* [Lisa Jones](mailto:lisa.jones@owasp.com)
 
 ## Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
 ```
@@ -61,7 +62,7 @@ Description                              | Amount
 8x8 inline table*                        | $1170.00 (includes 1 badge)
 Badge(s) $320ea.                         | $1920.00 (2019= 4 Volunteers + 2 staff)
 Artwork                                  | $1500.00 (2019)
-Stickers                                 | $819.00 (2019)
+Stickers                                 | $819.00 (2019) QTY 750 for 5 seperate designs
 Promotional Merch?                       | $6220.00 (750 t-shirts, <$8 2019)
 Tablecloth?                              | $250.00 (estimate)
 Postcard & Artwork (Promote San Fran)    | $1000.00 (estimate)
