--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -30,7 +30,7 @@ https://defcon.org/index.html
 - 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL)
 - Postcard handouts for future OWASP Global Events
 
-## Milestones
+## Milestones All dates are subject to change based on CORVID-19
 
 - [X] 2020-03-02 ,DEFCON 28 Vendor Application opens
 - [X] 2020-03-03, Email sent to Jon to inquiry if he would like to participate. No response
