--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -56,20 +56,20 @@ Las Vegas, NV 89109,
 
 ## Budget - Draft
 
-Description                              | Amount
---------------                           | ----:
-**Expenses**                             | 
-8x8 inline table*                        | $1170.00 (includes 1 badge)
-Badge(s) $320ea.                         | $1920.00 (2019= 4 Volunteers + 2 staff)
-Artwork                                  | $1500.00 (2019)
-Stickers                                 | $819.00 (2019) QTY 750 for 5 seperate designs
-Promotional Merch?                       | $6220.00 (750 t-shirts, <$8 2019)
-Tablecloth?                              | $250.00 (estimate)
-Postcard & Artwork (Promote San Fran)    | $1000.00 (estimate)
-Travel & Hotel                           | $5000.00 (2 staff)
+Description                              | Amount 2019                |Amount 2020                           
+--------------                           | ----:                      | ----: 
+**Expenses**                             |  **Expenses**              | **Expenses**
+8x8 inline table*                        | $1170.00                   | $1170.00 8X8 table only
+Badge(s) $320ea.                         | $1800.00                   | $1920.00
+Artwork- Melanie                         | $1500.00                   | $1500.00 
+Stickers                                 | $819.00 QTY-750-5 designs  | 1,000 - sheet of stickers
+Promotional Merch?                       | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
+Tablecloth?                              | $250.00 (estimate)         | Do we need?
+Postcard & Artwork (Promote San Fran)    | $1000.00 (estimate)        | Postcard to promote SF & Dublin
+Travel & Hotel                           | $5000.00 (2 staff)         | $5000 staff
 
 
-**Total Expenses**    | **$17,879.00**
+**Total Expenses**    | **$17,879.00*
 
 *All tables will be 6 feet x 30 inches with linens.
 *No sponsoring of party at or during event, NO chapter meeting at or during the event.
