--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -36,6 +36,7 @@ https://defcon.org/index.html
 - [X] 2020-03-03, Email sent to Jon to inquiry if he would like to participate. No response
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
+- [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
 - [ ] 2020-05-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
 - [ ] 2020-05-15, Artwork - (stickers, t-shirts?, postcard) 
 - [ ] 2020-05-18, Confirm and approve all artwork [Mike]
@@ -58,7 +59,7 @@ Las Vegas, NV 89109,
 Description                              | Amount 2019                |Amount 2020                           
 --------------                           | ----:                      | ----: 
 **Expenses**                             |  **Expenses**              | **Expenses**
-8x8 inline table*                        | $1170.00                   | $1170.00 8X8 table only
+8x8 inline table*                        | $1170.00                   | $1980.00 10X10 table only
 Badge(s) $320ea.                         | $1800.00                   | $1920.00-Must be OWASP member
 Artwork- Melanie                         | $1500.00                   | $1500.00 
 Stickers                                 | $819.00 QTY-750-5 designs  | 1,000 - sheet of stickers
