--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -7,6 +7,12 @@ date: August 6-9, 2020
 ---
 # DEFCON 28
 
+## Goals
+- Increase visiblity of OWASP
+- Promote diversity in AppSec
+- Accept financial donations where we provide a gift in return
+- Place demos of Breaker-facing Project demos in Villages
+
 ## Overview
 - 25K to 28K Attendees previous year
 - CASH ONLY
@@ -23,11 +29,13 @@ date: August 6-9, 2020
 
 ## Event site Link
 
-https://defcon.org/index.html
+* OWASP Tiger Team [Mailing List](mailto://defcon@owasp.org) or Group [Web interface](https://groups.google.com/a/owasp.org/forum/#!forum/defcon)
+* [Event Site](https://defcon.org/index.html)
 
-## Booth Inventory
+## Planned Booth Inventory
 - 2,500 Sticker sheets (maybe collateral on  back)
 - 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL)
+- Diversity in AppSec Coins
 - Postcard handouts for future OWASP Global Events
 
 ## Milestones All dates are subject to change based on CORVID-19
@@ -45,7 +53,9 @@ https://defcon.org/index.html
 
 ## Leadership
 
-* [Lisa Jones](mailto:lisa.jones@owasp.com)
+* Outreach Committee
+* Grant Ongers
+* Staff - [Lisa Jones](mailto:lisa.jones@owasp.com)
 
 ## Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
 ```
@@ -77,6 +87,7 @@ Travel & Hotel                           | $5000.00 (2 staff)         | $5000 st
 
 ## Application 2020
 
+```
 ---------- Forwarded message ---------
 From: Lisa Jones <lisa.jones@owasp.com>
 Date: Wed, Mar 4, 2020 at 8:04 PM
@@ -148,3 +159,4 @@ Thanks for your support.
 Lisa Jones
 lisa.jones@owasp.com
 The OWASP Foundation
+```
