--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -36,7 +36,7 @@ date: August 6-9, 2020
 - 2,500 Sticker sheets (maybe collateral on  back)
 - 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL)
 - Diversity in AppSec Coins
-- Postcard handouts for future OWASP Global Events
+- Postcard handouts for future OWASP Global Events - (Kim - Foundation)
 
 ## Milestones All dates are subject to change based on CORVID-19
 
@@ -73,9 +73,9 @@ Description                              | Amount 2019                |Amount 20
 Badge(s) $320ea.                         | $1800.00                   | $1920.00-Must be OWASP member
 Artwork- Melanie                         | $1500.00                   | $1500.00 
 Stickers                                 | $819.00 QTY-750-5 designs  | 1,000 - sheet of stickers
-Promotional Merch?                       | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
-Tablecloth?                              | $250.00 (estimate)         | Do we need?
-Postcard & Artwork (Promote San Fran)    | $1000.00 (estimate)        | Postcard to promote SF & Dublin
+Promotional Merch & tablecloth           | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
+Tablecloth?                              | t-shirt vendor             | Do we need? ($250.00?)
+Flyer & Artwork(Promote SF & Dublin)     | $1000.00 (estimate)        | Postcard to promote SF & Dublin (Kim) 
 Travel & Hotel                           | $5000.00 (2 staff)         | $5000 staff
 
 
