--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -28,14 +28,13 @@ date: August 6-9, 2020
 
 
 ## Event site Link
-
 * OWASP Tiger Team [Mailing List](mailto://defcon@owasp.org) or Group [Web interface](https://groups.google.com/a/owasp.org/forum/#!forum/defcon)
 * [Event Site](https://defcon.org/index.html)
 
 ## Planned Booth Inventory
 - 2,500 Sticker sheets (maybe collateral on  back)
 - 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL)
-- Diversity in AppSec Coins
+- 250 Diversity in AppSec Coins
 - Postcard handouts for future OWASP Global Events - (Kim - Foundation)
 
 ## Milestones All dates are subject to change based on CORVID-19
@@ -46,10 +45,19 @@ date: August 6-9, 2020
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
 - [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
 - [ ] 2020-05-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
-- [ ] 2020-05-15, Artwork - (stickers, t-shirts?, postcard) 
-- [ ] 2020-05-18, Confirm and approve all artwork [Mike]
-- [ ] 2020-06-01, Application accepted Go or NO Go 
-- [ ] 2020-07-02 Volunteers (must be OWASP members) identified (wufoo) [Lisa]
+- [ ] 2020-05-15, Booth layout complete with signage config, [Mike]
+- [ ] 2020-05-18, Artwork Start
+- [ ] 2020-06-01, Notice provided by DEFCON to Vendors 
+- [ ] 2020-06-08, Confirm and approve all artwork, [Mike]
+- [ ] 2020-06-08, Order Diversity in AppSec coins, [Lisa]
+- [ ] 2020-07-01, Order Shirts/Stickers to be shipped to LV (location?), [Lisa]
+- [ ] 2020-07-02, Volunteer Signup Form online (preference given to members), [Lisa]
+- [ ] 2020-07-24, Close volunteer signup form, [Mike]
+- [ ] 2020-07-27, Notify selected volunteers, [Lisa]
+- [ ] 2020-08-06, DEFCON Booth Setup
+- [ ] 2020-08-07, DEFCON Day 1
+- [ ] 2020-08-08, DEFCON Day 2
+- [ ] 2020-08-09, DEFCON Day 3
 
 ## Leadership
 
