--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -37,6 +37,19 @@ date: August 6-9, 2020
 - 250 Diversity in AppSec Coins
 - Postcard handouts for future OWASP Global Events - (Kim - Foundation)
 
+## Responsibilities
+- Committee
+  - Overall strategy/goals 
+  - Selecting volunteers and booth staffing schedule (setup, show, teardown)
+  - Securing opportunities in Villages
+  - Input on design (booth and swag)
+  - Develop budget plan
+- Staff:
+  - Final approval of artwork
+  - Order designed items (booth and swag)
+  - System for soliciting volunteers for booth
+  - Handling all cash at booth
+
 ## Milestones All dates are subject to change based on CORVID-19
 
 - [X] 2020-03-02 ,DEFCON 28 Vendor Application opens
@@ -45,6 +58,7 @@ date: August 6-9, 2020
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
 - [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
 - [ ] 2020-05-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
+- [ ] 2020-05-08, Budget complete
 - [ ] 2020-05-15, Booth layout complete with signage config, [Mike]
 - [ ] 2020-05-18, Artwork Start
 - [ ] 2020-06-01, Notice provided by DEFCON to Vendors 
