--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -44,7 +44,7 @@ date: August 6-9, 2020
   - Securing opportunities in Villages
   - Input on design (booth and swag)
   - Develop budget plan
-- Staff:
+- Staff
   - Final approval of artwork
   - Order designed items (booth and swag)
   - System for soliciting volunteers for booth
