--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -12,6 +12,10 @@ date: August 6-9, 2020
 - Promote diversity in AppSec
 - Accept financial donations where we provide a gift in return
 - Place demos of Breaker-facing Project demos in Villages
+- Speak at AppSec Village through member submissions
+
+## Potential Ideas
+- Career fair with Hacks for Pancakes, Zoe
 
 ## Overview
 - 25K to 28K Attendees previous year
@@ -31,16 +35,12 @@ date: August 6-9, 2020
 * OWASP Tiger Team [Mailing List](mailto://defcon@owasp.org) or Group [Web interface](https://groups.google.com/a/owasp.org/forum/#!forum/defcon)
 * [Event Site](https://defcon.org/index.html)
 
-## Planned Booth Inventory
-- 2,500 Sticker sheets (maybe collateral on  back)
-- 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL)
-- 250 Diversity in AppSec Coins
-- Postcard handouts for future OWASP Global Events - (Kim - Foundation)
-
 ## Responsibilities
-- Committee
+- Committee / Tiger Team
   - Overall strategy/goals 
+    - Coordinating with onsite social events and parties
   - Selecting volunteers and booth staffing schedule (setup, show, teardown)
+    - 20% of staff to be walkup
   - Securing opportunities in Villages
   - Input on design (booth and swag)
   - Develop budget plan
@@ -50,9 +50,20 @@ date: August 6-9, 2020
   - System for soliciting volunteers for booth
   - Handling all cash at booth
 
+## Planned Booth Inventory
+- Giveaway: 2,500 Sticker sheets (maybe collateral on back)
+- Giveaway: OWASP Member and Lifetime giveaway
+- 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL) (LY 750 total)
+- 250-500 Face masks (monitor budget)
+- 250 Diversity in AppSec Coins
+- Postcard handouts for future OWASP Global Events - (Kim - Foundation)
+
+## Booth Activities
+- Trade shirt for a donation
+
 ## Milestones All dates are subject to change based on CORVID-19
 
-- [X] 2020-03-02 ,DEFCON 28 Vendor Application opens
+- [X] 2020-03-02, DEFCON 28 Vendor Application opens
 - [X] 2020-03-03, Email sent to Jon to inquiry if he would like to participate. No response
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
@@ -91,17 +102,18 @@ Las Vegas, NV 89109,
 Description                              | Amount 2019                |Amount 2020                           
 --------------                           | ----:                      | ----: 
 **Expenses**                             |  **Expenses**              | **Expenses**
-8x8 inline table*                        | $1170.00                   | $1980.00 10X10 table only
-Badge(s) $320ea.                         | $1800.00                   | $1920.00-Must be OWASP member
-Artwork- Melanie                         | $1500.00                   | $1500.00 
-Stickers                                 | $819.00 QTY-750-5 designs  | 1,000 - sheet of stickers
+8x8 inline table*                        | $1170.00                   | $,1980  10X10 table only
+Badge(s) $320ea.                         | $1800.00                   | $1,920 -Must be OWASP member
+Artwork Creative - Melanie               | $1500.00                   | $2,000 
+Stickers                                 | $819.00 QTY-750-5 designs  | $1,500 - sheet of stickers
 Promotional Merch & tablecloth           | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
 Tablecloth?                              | t-shirt vendor             | Do we need? ($250.00?)
 Flyer & Artwork(Promote SF & Dublin)     | $1000.00 (estimate)        | Postcard to promote SF & Dublin (Kim) 
-Travel & Hotel                           | $5000.00 (2 staff)         | $5000 staff
+Travel & Hotel                           | $5000.00 (2 staff)         | $5,000 staff
 
 
-**Total Expenses**    | **$17,879.00*
+**Total Expenses**    | **$17,879*
+**Total Donations**   | **$10,000**
 
 *All tables will be 6 feet x 30 inches with linens.
 *No sponsoring of party at or during event, NO chapter meeting at or during the event.
@@ -181,4 +193,5 @@ Thanks for your support.
 Lisa Jones
 lisa.jones@owasp.com
 The OWASP Foundation
+
 ```
