--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -71,6 +71,7 @@ date: August 6-9, 2020
 - [ ] 2020-05-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
 - [ ] 2020-05-08, Budget complete
 - [ ] 2020-05-15, Booth layout complete with signage config, [Mike]
+- [ ] 2020-05-15, Initial designs prepared for review, [Melissa]
 - [ ] 2020-05-18, Artwork Start
 - [ ] 2020-06-01, Notice provided by DEFCON to Vendors 
 - [ ] 2020-06-08, Confirm and approve all artwork, [Mike]
