--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -1,6 +1,7 @@
 ---
 
-title: DEFCON 28
+title: DEFCON 28 
+## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 layout: full-width
 date: August 6-9, 2020
 
@@ -26,7 +27,6 @@ date: August 6-9, 2020
 - NO DISCOUNTS
 
 ## Hours/Schedule
-- August 6, 2020 Table setup only
 - August 7 & 8, 2020,Vendor can access at 9am, 10am - 7pm (Vendor room is open to public)
 - August 9, 2020, Vendor can access at 9am,  10am - 3pm (Vendor room is open to public)
 
@@ -68,12 +68,10 @@ date: August 6-9, 2020
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
 - [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
-- [ ] 2020-05-06, Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0, [Mike]
-- [ ] 2020-05-08, Budget complete
-- [ ] 2020-05-15, Booth layout complete with signage config, [Mike]
-- [ ] 2020-05-15, Initial designs prepared for review, [Melissa]
-- [ ] 2020-05-18, Artwork Start - [OSD-3708]
-- [ ] 2020-06-01, Notice provided by DEFCON to Vendors 
+- [X] 2020-05-08, DefCon 28 announced Event virtual due to CORVID 19.
+## Re-evaluate the Event is Virtual 
+- [X] 2020-05-12, Artwork Start - [OSD-3708 CANCELED]
+- [ ] 2020-06-01, Notice provided by DEFCON to Vendors
 - [ ] 2020-06-08, Confirm and approve all artwork, [Mike]
 - [ ] 2020-06-08, Order Diversity in AppSec coins, [Lisa]
 - [ ] 2020-07-01, Order Shirts/Stickers to be shipped to LV (location?), [Lisa]
@@ -90,7 +88,7 @@ date: August 6-9, 2020
 * Outreach Committee
 * Grant Ongers
 * Staff - [Lisa Jones](mailto:lisa.jones@owasp.com)
-
+## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 ## Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
 ```
 Harrah's Las Vegas
@@ -99,8 +97,8 @@ Las Vegas, NV 89109,
 ```
 
 ## Budget - Draft
-
-Description                              | Amount 2019                |Amount 2020                           
+## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
+Description                              | Amount 2019                |Amount 2020                            
 --------------                           | ----:                      | ----: 
 **Expenses**                             |  **Expenses**              | **Expenses**
 8x8 inline table*                        | $1170.00                   | $,1980  10X10 table only
