online forum to participate
https://forum.defcon.org/node/231980

--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -1,12 +1,16 @@
 ---
 
 title: DEFCON 28 
-## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 layout: full-width
 date: August 6-9, 2020
 
 ---
 # DEFCON 28
+
+## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
+How do I find out about virtual events?
+
+Even though our in-person Las Vegas event is canceled, we will run DEF CON 28 Safe Mode August 7-9 (Friday through Sunday) with 101 orientation Thursday - all of it remote. We will use the DEF CON Forums to coordinate all the various ways for you to participate. That is where everyone can announce their plans, do signups, post pictures and videos and get people involved.
 
 ## Goals
 - Increase visiblity of OWASP
@@ -59,7 +63,8 @@ date: August 6-9, 2020
 - Postcard handouts for future OWASP Global Events - (Kim - Foundation)
 
 ## Booth Activities
-- Trade shirt for a donation
+- In person event canceled. 
+https://forum.defcon.org/node/231980
 
 ## Milestones All dates are subject to change based on CORVID-19
 
@@ -101,10 +106,10 @@ Las Vegas, NV 89109,
 Description                              | Amount 2019                |Amount 2020                            
 --------------                           | ----:                      | ----: 
 **Expenses**                             |  **Expenses**              | **Expenses**
-8x8 inline table*                        | $1170.00                   | $,1980  10X10 table only
-Badge(s) $320ea.                         | $1800.00                   | $1,920 -Must be OWASP member
-Artwork Creative - Melanie               | $1500.00                   | $2,000 
-Stickers                                 | $819.00 QTY-750-5 designs  | $1,500 - sheet of stickers
+8x8 inline table*                        | $1170.00                   | $ 0.00  10X10 table only
+Badge(s) $320ea.                         | $1800.00                   | $0.00 -Must be OWASP member
+Artwork Creative - Melanie               | $1500.00                   | $2,000 canceled
+Stickers                                 | $819.00 QTY-750-5 designs  | $0.00 - sheet of stickers
 Promotional Merch & tablecloth           | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
 Tablecloth?                              | t-shirt vendor             | Do we need? ($250.00?)
 Flyer & Artwork(Promote SF & Dublin)     | $1000.00 (estimate)        | Postcard to promote SF & Dublin (Kim) 
