--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -10,7 +10,7 @@ date: August 6-9, 2020
 ## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 How do I find out about virtual events?
 
-Even though our in-person Las Vegas event is canceled, we will run DEF CON 28 Safe Mode August 7-9 (Friday through Sunday) with 101 orientation Thursday - all of it remote. We will use the DEF CON Forums to coordinate all the various ways for you to participate. That is where everyone can announce their plans, do signups, post pictures and videos and get people involved.
+Even though our in-person Las Vegas event is canceled, we will run DEF CON 28 Safe Mode August 7-9 (Friday through Sunday) with 101 orientation Thursday - all of it remote. We will use the DEF CON Forums to coordinate all the various ways for you to participate. That is where everyone can announce their plans, do signups, post pictures and videos and get people involved.  Outreach Committee to review to propose new plan and budget on how OWASP may participate.  Discuss new plan and plan for agreement.  
 
 ## Goals
 - Increase visiblity of OWASP
