changed date and name

--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -1,11 +1,11 @@
 ---
 
-title: DEFCON 28 
+title: DEFCON 28 NOW Called DEFCON Safe Mode 
 layout: full-width
-date: August 6-9, 2020
+date: August 7-9, 2020 NEW DATES
 
 ---
-# DEFCON 28
+# DEFCON SAFE MODE 
 
 ## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 How do I find out about virtual events?
