--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -76,17 +76,18 @@ https://forum.defcon.org/node/231980
 - [X] 2020-05-08, DefCon 28 announced Event virtual due to CORVID 19.
 ## Re-evaluate the Event is Virtual 
 - [X] 2020-05-12, Artwork Start - [OSD-3708 CANCELED]
-- [ ] 2020-06-01, Notice provided by DEFCON to Vendors
-- [ ] 2020-06-08, Confirm and approve all artwork, [Mike]
-- [ ] 2020-06-08, Order Diversity in AppSec coins, [Lisa]
-- [ ] 2020-07-01, Order Shirts/Stickers to be shipped to LV (location?), [Lisa]
-- [ ] 2020-07-02, Volunteer Signup Form online (preference given to members), [Lisa]
-- [ ] 2020-07-24, Close volunteer signup form, [Mike]
-- [ ] 2020-07-27, Notify selected volunteers, [Lisa]
-- [ ] 2020-08-06, DEFCON Booth Setup
-- [ ] 2020-08-07, DEFCON Day 1
-- [ ] 2020-08-08, DEFCON Day 2
-- [ ] 2020-08-09, DEFCON Day 3
+- [X] 2020-06-01, Notice provided by DEFCON to Vendors
+- Event Virtual 
+- [X] Confirm and approve all artwork 
+- [X] Order Diversity in AppSec coins 
+- [X] Order Shirts/Stickers to be shipped to LV (location?), 
+- [X] Volunteer Signup Form online (preference given to members),
+- [X] Close volunteer signup form,
+- [X] Notify selected volunteers
+- [X] DEFCON Booth Setup
+- [X] DEFCON Day 1
+- [X] DEFCON Day 2
+- [X] DEFCON Day 3
 
 ## Leadership
 
@@ -94,11 +95,7 @@ https://forum.defcon.org/node/231980
 * Grant Ongers
 * Staff - [Lisa Jones](mailto:lisa.jones@owasp.com)
 ## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
-## Hotel: (Reservation needed https://book.passkey.com/go/SHDEF0)
 ```
-Harrah's Las Vegas
-3475 Las Vegas Boulevard South
-Las Vegas, NV 89109, 
 ```
 
 ## Budget - Draft
@@ -113,7 +110,7 @@ Stickers                                 | $819.00 QTY-750-5 designs  | $0.00 - 
 Promotional Merch & tablecloth           | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
 Tablecloth?                              | t-shirt vendor             | Do we need? ($250.00?)
 Flyer & Artwork(Promote SF & Dublin)     | $1000.00 (estimate)        | Postcard to promote SF & Dublin (Kim) 
-Travel & Hotel                           | $5000.00 (2 staff)         | $5,000 staff
+Travel & Hotel                           | $5000.00 (2 staff)         |staff
 
 
 **Total Expenses**    | **$17,879*
