--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -54,7 +54,7 @@ Even though our in-person Las Vegas event is canceled, we will run DEF CON 28 Sa
   - System for soliciting volunteers for booth
   - Handling all cash at booth
 
-## Planned Booth Inventory
+## Planned Booth Inventory In person event canceled - inventory will not be needed
 - Giveaway: 2,500 Sticker sheets (maybe collateral on back)
 - Giveaway: OWASP Member and Lifetime giveaway
 - 1,000 Shirts Unisex, 1 design, 5 sizes (S,M,L,XL,XXL) (LY 750 total)
@@ -97,20 +97,19 @@ https://forum.defcon.org/node/231980
 ## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 ```
 ```
-
 ## Budget - Draft
 ## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
 Description                              | Amount 2019                |Amount 2020                            
 --------------                           | ----:                      | ----: 
 **Expenses**                             |  **Expenses**              | **Expenses**
-8x8 inline table*                        | $1170.00                   | $ 0.00  10X10 table only
+8x8 inline table*                        | $1170.00                   | $0.00  10X10 table only
 Badge(s) $320ea.                         | $1800.00                   | $0.00 -Must be OWASP member
 Artwork Creative - Melanie               | $1500.00                   | $2,000 canceled
 Stickers                                 | $819.00 QTY-750-5 designs  | $0.00 - sheet of stickers
 Promotional Merch & tablecloth           | $6220.00 (750shirts <$8)   | 1 design, unisex shirt only 5 sizes
 Tablecloth?                              | t-shirt vendor             | Do we need? ($250.00?)
 Flyer & Artwork(Promote SF & Dublin)     | $1000.00 (estimate)        | Postcard to promote SF & Dublin (Kim) 
-Travel & Hotel                           | $5000.00 (2 staff)         |staff
+Travel & Hotel                           | $5000.00 (2 staff)         | $0.00  staff
 
 
 **Total Expenses**    | **$17,879*
