--- a/projects/202008-Defcon-28.md
+++ b/projects/202008-Defcon-28.md
@@ -71,11 +71,11 @@ https://forum.defcon.org/node/231980
 - [X] 2020-03-02, DEFCON 28 Vendor Application opens
 - [X] 2020-03-03, Email sent to Jon to inquiry if he would like to participate. No response
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
-- [X] 2020-03-05, Kevin Sugihara <kevin@infamousdevel.com> Thank you for reaching out. I've received your application and will      reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
+- [X] 2020-03-05, Kevin Sugihara Thank you for reaching out. I've received your application and will reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
 - [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
 - [X] 2020-05-08, DefCon 28 announced Event virtual due to CORVID 19.
 ## Re-evaluate the Event is Virtual 
-- [X] 2020-05-12, Artwork Start - [OSD-3708 CANCELED]
+- [X] 2020-05-12, Artwork Start - [OSD-3708 C ANCELED]
 - [X] 2020-06-01, Notice provided by DEFCON to Vendors
 - Event Virtual 
 - [X] Confirm and approve all artwork 
