--- a/projects-historical/202008-Defcon-28.md
+++ b/projects-historical/202008-Defcon-28.md
@@ -7,7 +7,7 @@ date: August 7-9, 2020 NEW DATES
 ---
 # DEFCON SAFE MODE 
 
-## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
+## VIRTUAL EVENT DUE to COVID 19 Announced May 8, 2020
 How do I find out about virtual events?
 
 Even though our in-person Las Vegas event is canceled, we will run DEF CON 28 Safe Mode August 7-9 (Friday through Sunday) with 101 orientation Thursday - all of it remote. We will use the DEF CON Forums to coordinate all the various ways for you to participate. That is where everyone can announce their plans, do signups, post pictures and videos and get people involved.  Outreach Committee to review to propose new plan and budget on how OWASP may participate.  Discuss new plan and plan for agreement.  
@@ -75,7 +75,7 @@ https://forum.defcon.org/node/231980
 - [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
 - [X] 2020-05-08, DefCon 28 announced Event virtual due to CORVID 19.
 ## Re-evaluate the Event is Virtual 
-- [X] 2020-05-12, Artwork Start - [OSD-3708 C ANCELED]
+- [X] 2020-05-12, Artwork Start - [OSD-3708 CANCELED]
 - [X] 2020-06-01, Notice provided by DEFCON to Vendors
 - Event Virtual 
 - [X] Confirm and approve all artwork 
@@ -152,7 +152,7 @@ Have you been a vendor at DEF CON before?
 If so, what was your last DC? DefCon 27 and DefCon 26
 
 Please provide a brief, one paragraph blurb to use for publication in the DC program and on the DC web site, if accepted:
-The OWASP Foundation is a 501(c)3 nonprofit (whitehat) application security group. Our open-source community projects focus on the security of software such as ZAP (a widely used web page security scanner) & OWASP Top 10 (a direct contributor to PCI). We are a global community of over 275 chapters, and tens of thousands of members, that provides industry-leading educational and training conferences annually.  
+The OWASP Foundation is a 501(c)3 nonprofit (whitehat) application security group. Our open-source community projects focus on the security of software such as ZAP (a widely used web page security scanner) & OWASP Top 10 (a direct contributor to PCI). We are a global community of over 200+ chapters, and tens of thousands of members, that provides industry-leading educational and training conferences annually.  
 
 Please include a logo for use in the printed program and on the website.  Logo attached.
 
