orthographic corrections for oranges

--- a/projects-historical/202008-Defcon-28.md
+++ b/projects-historical/202008-Defcon-28.md
@@ -66,14 +66,14 @@ Even though our in-person Las Vegas event is canceled, we will run DEF CON 28 Sa
 - In person event canceled. 
 https://forum.defcon.org/node/231980
 
-## Milestones All dates are subject to change based on CORVID-19
+## Milestones All dates are subject to change based on COVID-19
 
 - [X] 2020-03-02, DEFCON 28 Vendor Application opens
 - [X] 2020-03-03, Email sent to Jon to inquiry if he would like to participate. No response
 - [X] 2020-03-05, Submission of Vendor Application, [Lisa]
 - [X] 2020-03-05, Kevin Sugihara Thank you for reaching out. I've received your application and will reach out shortly after the close of our call for vendors (6/1/20) to let you know if you've been accepted.
 - [X] 2020-04-16, Emailed Kevin Sugihara to update table size 10x10 inline (against the wall) $1980. 
-- [X] 2020-05-08, DefCon 28 announced Event virtual due to CORVID 19.
+- [X] 2020-05-08, DefCon 28 announced Event virtual due to COVID 19.
 ## Re-evaluate the Event is Virtual 
 - [X] 2020-05-12, Artwork Start - [OSD-3708 CANCELED]
 - [X] 2020-06-01, Notice provided by DEFCON to Vendors
@@ -94,11 +94,11 @@ https://forum.defcon.org/node/231980
 * Outreach Committee
 * Grant Ongers
 * Staff - [Lisa Jones](mailto:lisa.jones@owasp.com)
-## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
+## VIRTUAL EVENT DUE to COVID 19 Announced May 8, 2020
 ```
 ```
 ## Budget - Draft
-## VIRTUAL EVENT DUE to CORVID 19 Announced May 8, 2020
+## VIRTUAL EVENT DUE to COVID 19 Announced May 8, 2020
 Description                              | Amount 2019                |Amount 2020                            
 --------------                           | ----:                      | ----: 
 **Expenses**                             |  **Expenses**              | **Expenses**
