Make it a bit clearer

--- a/budget/2021.md
+++ b/budget/2021.md
@@ -7,9 +7,21 @@ layout: full-width
 
 ## OWASP 2021 Budget
 
-In 2021, we are forecasting a small net loss of \$94k, with a budgeted income of \$1,408,433 (down 36.5% from \$2,218,745 in 2020), and expenses of \$1,502,878 (down 31.8% from \$2,202,512 in 2020). Shedding \$700k in expenses in a single year is testament to the hard work and belt tightening by our staff and community since 2019.
+In 2021, we are forecasting a small net loss of \$94k, with a budgeted income of \$1,408,433 (down 36.5% from \$2,218,745 in 2020), and expenses of \$1,502,878 (down 31.8% from \$2,202,512 in 2020). COVID has been an especially challenging time for the OWASP Foundation, which prides itself on spending on mission per non-profit best practices. Our goal is to keep expenses and overheads as low as we can, enhance delivery of our mission through fundamental finance and policy reform, and diversify our income sources dramatically, whilst adding many new sources of income.
 
-During 2020, OWASP has had a income reduction of 37.5% year on year over 2019. As a result, we had to take drastic action to reduce our costs to the bare minimum. We exceeded the Budget Model Z COVID budget's targets by over \$316,000, but we still need to be cognizant of keeping on top of costs, with new lines of business, merchandise, fundraising, grant seeking, donations, increase corporate and individual memberships, and to run sufficient numbers of virtual events to try to plug the gap in our income created by not running any in person events in 2020 and 2021. We will be leaving no stone unturned as we look to new revenue sources and government relief throughout the year.
+### 2020 Financial Performance
+
+OWASP exceeded the revised COVID era Budget Model Z targets by over \$316,000, and we made a small profit for the year. Despite this, in 2020, OWASP has had a income reduction of 37.5% year on year over 2019. As a result, we had to take drastic action to reduce our costs to the bare minimum. We had to defer the two scheduled Global AppSecs, which in a normal year, pays for nearly all of OWASP's expenses and allows us to save for the future.
+
+### 2021 Income Forecast
+
+In 2021, we forecast a very conservative income stream based around the activity and earnings of the latter part of 2020. As this is a conservative forecast, we need to add new lines of business, merchandise, fundraising, grant seeking, donations, increase corporate and individual memberships, and to run sufficient numbers of virtual events to try to plug the gap in our income created by not running any in person events in 2020 and 2021. We will be leaving no stone unturned as we look to new revenue sources and government relief throughout the year.
+
+### 2021 Expenses Forecast
+
+Shedding \$700k in expenses in a single year is testament to the hard work and belt tightening by our staff and community since 2019. We will continue to keep a very close eye on expenses, and with finance reform, we are expecting lower administrative overheads and costs, which is required as the community returns to in person events and activities and starts spending to similar levels as 2019.
+
+### Future outlook
 
 We plan on returning to two Global AppSec events in Dublin in June and San Francisco in October 2022, which will create pressure on the Foundation to pay some large deposits early in 2022, in return for hopefully a healthy profit and then financial recovery in 2023.
 
