Fix trailing comma

--- a/budget/2021.md
+++ b/budget/2021.md
@@ -43,8 +43,8 @@ function drawChart() {
   ['Task', 'Distribution of Spending'],
   ['Programs', 68.1],
   ['Fundraising', 6.0],
-  ['Management/General', 25.9],
-]);
+  ['Management/General', 25.9]
+   ]);
 
   // Optional; add a title and set the width and height of the chart
   var options = {'title':'OWASP Spending 2021', 'width':550, 'height':400};
