--- a/budget/2021.md
+++ b/budget/2021.md
@@ -27,7 +27,7 @@ We plan on returning to two Global AppSec events in Dublin in June and San Franc
 
 ## Charity Spending Guidelines
 
-Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. **The FY21 budget forecasts the OWASP Foundation will spend 74.1% of its funds on Programming.** A major goal is to get this to 80% by increasing revenue and maintaining low expenses through out the year.
+Generally, it is best practice for non-profits to spend at least 80% of their funding on "Programs" - with the goal of getting to 85% or better. The FY21 budget forecasts the OWASP Foundation will spend 68.1% of its funds on Programming. A major goal is to get this to 80% by increasing revenue and maintaining low expenses through out the year.
 
 <div id="piechart"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
