--- a/budget/2022.md
+++ b/budget/2022.md
@@ -7,7 +7,7 @@ layout: full-width
 
 ## OWASP 2022 Budget
 
-### 2021 Financial Performance
+### 2022 Financial Performance
 
 ### 2022 Income Forecast
 
@@ -36,7 +36,7 @@ function drawChart() {
   ['Projects', 351813],
   ['Chapters', 196672],
   ['Outreach', 108009],
-  ['Education', 55203],]
+  ['Education', 55203],
   ['Diversity in AppSec', 45662]
    ]);
 
